[gd_scene load_steps=9 format=3 uid="uid://cl7wdo0jyfvq6"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_ki8cq"]
[ext_resource type="Texture2D" uid="uid://b5i37yn0sk68o" path="res://graphics/player/player.png" id="1_usioo"]
[ext_resource type="Texture2D" uid="uid://cs13mxtsjiwoa" path="res://graphics/decals/white.png" id="3_ofj70"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5g8yb"]
radius = 60.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_xder3"]
polygon = PackedVector2Array(-17, 59, 7, 53, 22, 46, 38, 39, 53, 39, 54, 49, 61, 52, 89, 51, 92, 47, 92, 41, 95, 41, 98, 40, 103, 34, 105, 33, 106, 35, 113, 35, 117, 35, 118, 32, 124, 31, 128, 25, 129, 13, 127, 8, 126, 5, 123, 3, 118, 6, 120, 1, 118, 0, 113, 0, 108, 0, 104, -5, 99, -6, 93, -6, 83, -14, 72, -13, 59, -26, 52, -32, 44, -32, 40, -43, 31, -51, 22, -62, 19, -64, 14, -63, 8, -60, 4, -62, -6, -62, -15, -58, -18, -59, -24, -59, -31, -55, -33, -49, -35, -48, -38, -50, -49, -47, -57, -40, -58, -33, -63, -27, -66, -14, -65, -3, -62, 7, -56, 12, -56, 15, -58, 18, -55, 25, -49, 31, -43, 41, -40, 51, -32, 57)

[sub_resource type="Gradient" id="Gradient_k4a8v"]
colors = PackedColorArray(0.686275, 0.952941, 1, 0.690196, 0.85098, 0.976471, 1, 0.560784)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_22gme"]
gradient = SubResource("Gradient_k4a8v")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0edht"]
particle_flag_disable_z = true
spread = 15.968
initial_velocity_min = 1200.0
initial_velocity_max = 1500.0
gravity = Vector3(5, 2.08165e-12, 2.08165e-12)
scale_min = 0.3
scale_max = 0.8
color = Color(0.684402, 0.953222, 0.999925, 0.690196)
color_ramp = SubResource("GradientTexture1D_22gme")

[node name="Player" type="CharacterBody2D" groups=["Entity"]]
collision_mask = 31
script = ExtResource("1_ki8cq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5g8yb")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_xder3")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(32, -2)
rotation = 1.5708
texture = ExtResource("1_usioo")

[node name="Timer_Laser" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer_Grenade" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(129, 16)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(127, 28)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(127, 6)

[node name="GrenadeStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="GrenadeStartPositions"]
position = Vector2(129, 17)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(125, 16)
emitting = false
process_material = SubResource("ParticleProcessMaterial_0edht")
texture = ExtResource("3_ofj70")
lifetime = 0.2
one_shot = true

[connection signal="timeout" from="Timer_Laser" to="." method="_on_timer_laser_timeout"]
[connection signal="timeout" from="Timer_Grenade" to="." method="_on_timer_grenade_timeout"]
